Fix missing background when run on Netlify

--- a/src/scss/layouts/_modalPopup.scss
+++ b/src/scss/layouts/_modalPopup.scss
@@ -39,7 +39,7 @@
     width: 700px;
     min-height: 500px;
     background-color: rgb(255, 255, 255);
-    background-image: url('../../../public/images/modal-endofgame-image.png');
+    background-image: url(/images/modal-endofgame-image.png);
     background-size: 120% 120%;
     // background-repeat: no-repeat;
     background-size: 100% 100%;
